Fix broken CSS referring to removed button class
New class is mw-ui-button but we can just use the button element here.

--- a/resources/css/ext.translate.special.managetranslatorsandbox.css
+++ b/resources/css/ext.translate.special.managetranslatorsandbox.css
@@ -179,7 +179,7 @@
 	font-size: 22px;
 }
 
-.actions .button {
+.actions button {
 	margin-right: 1.5em;
 }
 
